--- a/src/components/Tweet/Tweet.module.css
+++ b/src/components/Tweet/Tweet.module.css
@@ -19,7 +19,7 @@
 .tweetInfo {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
 }
 .tweetImg {
